Bug#34086 : If falcon_page_cache_size is too big, this can lead to crashes and to data loss. *StorageHandler::initialize() decides to create a new master database if it could not be opened for any reason, even if the reason is memory allocation failure or falcon_master is locked by another application This is fixed now. *Fixed null pointer dereferencing after memory allocation failure *Cleanup  empty falcon_master.fts on errors